# ogqa

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: config.yaml  explorer_profile.json  master_history.json  nb1_eda.ipynb  nb2_llm.ipynb  nb3_llm_single_call.ipynb
notebooks/.ipynb_checkpoints/: nb2_llm-checkpoint.ipynb
notebooks/sample_batches/: batch_20260212_225517_aa22f136.jsonl
src/: main.py
