[project]
name = "ogqa"
version = "0.1.0"
description = "OG QA application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
